<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.decotsav.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/favourite"
        android:name="com.example.decotsav.ui.customized.CustomizedFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_customized" />

    <fragment
        android:id="@+id/profile"
        android:name="com.example.decotsav.ui.cart.CartFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/cart"
        android:name="com.example.decotsav.ui.cart.CartFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_cart" />
</navigation>