<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailedImage"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hbdy1"
            app:riv_corner_radius="24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/itemName"
                android:text="@string/basic"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_cancel_24"
                app:layout_constraintBottom_toTopOf="@+id/itemDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.947"
                app:layout_constraintStart_toEndOf="@+id/itemPrice"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="true"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemName"
                app:layout_constraintVertical_bias="0.183"
                tools:layout_editor_absoluteX="0dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_699"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.638"
                app:layout_constraintStart_toEndOf="@+id/itemName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.028" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
