<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_now"
        android:textColor="@color/btnend"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/btnend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/bottomImage"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hbdy1"
                app:riv_corner_radius="24dp" />



<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent">-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:orientation="vertical">
                    <TextView
                        android:id="@+id/bottomName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>


<!--                        <TextView-->
<!--                            android:id="@+id/bottomDesc"-->
<!--                            android:layout_width="250dp"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:ellipsize="end"-->
<!--                            android:maxLines="4"-->
<!--                            android:singleLine="true"-->
<!--                            android:text="@string/descriptionPopUp"-->
<!--                            android:textColor="@color/white" />-->

                        <TextView
                            android:id="@+id/bottomDesc"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:text="100 metallic balloons, ribbon with hbdy tag."
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintHorizontal_bias=".1"
                            app:layout_constraintVertical_bias=".75"
                            android:layout_marginTop="10dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/bottomPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="only at 599/-"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/addToCart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/add_to_cart"
                                android:textAllCaps="false"
                                android:textSize="10dp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp" />

                        </LinearLayout>
                        <!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->
                    </LinearLayout>

<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>